[tool.poetry]
name = "FunnyCoffee"
version = "0.4.5-alpha"
description = "A discord bot"
authors = ["HugeBrain16 <joshtuck373@gmail.com>"]
readme = "README.md"
repository = "https://github.com/HugeBrain16/FunnyCoffee"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
hikari = "^2.0.0-alpha.104"
cmdtools-py = "^3.0.1"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
Flask = "^2.0.2"
psutil = "^5.8.0"
lavasnek_rs = {version = "^0.1.0-alpha.3", allow-prereleases = true}
pymongo = "^4.1.1"
dnspython = "^2.2.1"
danbooru = "^0.0.7"
lyricsgenius = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
